fixes padding misalignment on forms at medium screensize

--- a/assets/css/codesquad_css.css
+++ b/assets/css/codesquad_css.css
@@ -1724,6 +1724,12 @@ footer {
 		padding: 0px 20px 5px 20px;
 	}
 
+	.container-two-sections,
+	.container-one-section {
+		flex-direction: column;
+		padding: 5px 20px;
+	}
+
 	.container-head span {
 		margin: 5px 0 0 0;
 	}
